# OpenGeoData

./: .dockerignore  .env  .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  README.md  docker-compose-dev.yml  docker-compose-web-dev.yml  docker-compose.yml  index.html  mkdocs.yml  search.html  sitemap.xml
docs/: env.md  (+5 more)
website/: Dockerfile  pyproject.toml  requirements.txt
website/initial_migrations/: about_migrations.md
website/initial_migrations/base/: 0002_initial_data.py
website/initial_migrations/usermanager/: 0002_initial_data.py
website/media-folder/default/icons/: license.html
website/scripts/: backup-fixtures.sh  build_tables_and_collectstatics.sh  entrypoint.sh  initial_data.sh  local_backup_fixtures.sh  local_restore_fixtures.sh  migrate-collectstic.sh  restore-fixtures.sh
website/website/abstracts/: admin.py  models.py
website/website/base/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
website/website/base/migrations/: 0001_initial.py  0002_fileupload.py  0002_initial_data.py  0002_rename_logo_sitecustomization_site_logo_and_more.py  0002_rename_sharedtag_sharedtags.py  0002_sitesocialurls_social_icon.py  0003_alter_sharedtags_description.py  0003_organogram.py  0003_remove_sitesocialurls_social_icon.py  0003_sitecustomization_address_and_more.py  0004_alter_organogram_site.py  0004_siteurls_sitecustomization_urls.py  0005_remove_organogram_site.py  0005_sitesocialurls_sitecustomization_social_urls.py  0006_sitesocialurls_icon.py  0007_remove_sitesocialurls_icon_alter_sitesocialurls_name_and_more.py  (+1 more)
website/website/city_planning/: admin.py  apps.py  models.py
website/website/cityplanning/: admin.py  apps.py  models.py
website/website/core/: sitemaps.py  tests.py  urls.py
website/website/gis/: apps.py
website/website/gismanager/: admin.py  apps.py  feed.py  models.py  urls.py  utils.py  views.py
website/website/templates/: 400.html  403.html  404.html  500.html  base.html
website/website/usermanager/: admin.py  models.py  urls.py
website/website/website/: .env  .env.dist  settings.py  urls.py
(+160 files in other folders)
