[tool.poetry]
name = "TechnicalOffice"
version = "0.0.1"
description = "SIT - Sistema Informativo Territoriale"
authors = ["Massimiliano Moraca"]
license = "Closed"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-environ = "^0.8.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
beautifulsoup4 = "^4.10.0"
Pillow = "^9.0.1"
lxml = "^4.7.1"
OWSLib = "^0.25.0"
fsspec = "^2022.1.0"
Shapely = "^1.8.0"
geopandas = "^0.10.2"
django-jazzmin = "^2.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
