[tool.poetry]
name = "OpenGeoData"
version = "0.5.1"
description = "OpenSource project focused on sharing of geographic data to citizens and technicians."
authors = ["Massimiliano Moraca"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-environ = "^0.8.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
beautifulsoup4 = "^4.10.0"
Pillow = "^9.0.1"
lxml = "^4.7.1"
OWSLib = "^0.25.0"
fsspec = "^2022.1.0"
Shapely = "^1.8.0"
geopandas = "^0.10.2"
django-jazzmin = "^2.5.0"
mkdocs = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
