[tool.poetry]
name = "OpenGeoData"
version = "1.0.0"
description = "OpenSource project focused on sharing of geographic data to citizens and technicians."
authors = ["Massimiliano Moraca"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
django-environ = "^0.8.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
beautifulsoup4 = "^4.10.0"
Pillow = "^9.0.1"
lxml = "^4.7.1"
OWSLib = "^0.25.0"
fsspec = "^2022.1.0"
Shapely = "^1.8.0"
geopandas = "^0.10.2"
django-jazzmin = "^2.4.9"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
